# fm26

./: .env.development  .env.example  .env.production  .env.staging  .gitignore  CSV_PARSER_IMPLEMENTATION_SUMMARY.md  DEPLOY.md  DUPLICATE_DETECTION_IMPLEMENTATION.md  Dockerfile  INDEXING_STRATEGY.md  MIGRATION_SETUP_SUMMARY.md  PLAYER_SEARCH_GIN_INDEX.md  POSSESSION_CALCULATION_IMPLEMENTATION.md  PROMPT_FOR_AI.md  Procfile  QUICKSTART.md  README.md  SETUP_INSTRUCTIONS.md  TASK_1.10_SUMMARY.md  TASK_1.10_VERIFICATION.md  TASK_1.2_SUMMARY.md  TASK_1.3_SUMMARY.md  TASK_1.4_SUMMARY.md  TASK_1.5_SUMMARY.md  TASK_1.5_VERIFICATION.md  TASK_1.6_SUMMARY.md  TASK_1.6_VERIFICATION.md  TASK_1.7_SUMMARY.md  TASK_1.8_SUMMARY.md  TASK_1.8_VERIFICATION.md  TASK_1.9_SUMMARY.md  TASK_1.9_VERIFICATION.md  TASK_10_1_COMPLETION_SUMMARY.md  TASK_10_2_COMPLETION_SUMMARY.md  TASK_10_3_COMPLETION_SUMMARY.md  TASK_10_4_COMPLETION_SUMMARY.md  TASK_10_5_COMPLETION_SUMMARY.md  TASK_2.13_SUMMARY.md  TASK_2.15_SUMMARY.md  TASK_2.16_SUMMARY.md  (+111 more)
alembic/: README.md  env.py
app/: README.md  __init__.py  main.py
docs/: BOT_QUICK_REFERENCE.md  BOT_SETUP.md  CELERY_QUICK_REFERENCE.md  CELERY_SETUP.md  DATABASE_QUICK_REFERENCE.md  DATABASE_SETUP.md  ENVIRONMENT_QUICK_REFERENCE.md  ENVIRONMENT_SETUP.md  MIGRATION_GUIDE.md  MIGRATION_QUICK_REFERENCE.md  index.html
football_ai/: __init__.py  football_env.py  football_env_11v11.py  football_env_11v11_v3.py  football_env_11v11_v4.py  formations.py  role_compatibility.py  train.py  train_11v11_gpu.py  train_11v11_v2.py  train_11v11_v3.py  train_11v11_v4.py  watch.py  watch_11v11.py  (+2 more)
(+426 files in other folders)
